历史告警信息

--- a/GlsunView/Content/css/nav.css
+++ b/GlsunView/Content/css/nav.css
@@ -3,7 +3,7 @@
 }
 .nav-bar{
     height: 50px;
-    background-color: #3c8dbc;
+    background-color: #445577;
     color:white;
     font-size: 1em;
 }
