--- a/GlsunView/Views/CurrentAlarm/List.cshtml
+++ b/GlsunView/Views/CurrentAlarm/List.cshtml
@@ -11,7 +11,7 @@
 
 <div class="main_body_top">
     <div class="row">
-        <form class="col-sm-12" action="@Url.Action("List","CurrentAlram")" method="post" id="formSearch">
+        <form class="col-sm-12" action="@Url.Action("List","CurrentAlarm")" method="post" id="formSearch">
             <label class="form-inline">
                 设备IP&nbsp;
                 <input class="form-control" name="IP" value="@conditions.IP" style="width:130px" />
