--- a/GlsunView/Views/Topology/Index.cshtml
+++ b/GlsunView/Views/Topology/Index.cshtml
@@ -339,7 +339,7 @@
             if (target.elementType == "node") {
                 console.log("双击节点");
                 var url = getHostPath() + "/Subnet/Index/" + target.xData;
-                parent.glsun.tab.add(target.text, url);
+                parent.tab.add(target.text, url);
             }
             else if (target.elementType == "link") {
                 console.log("双击连线");
