--- a/GlsunView/Views/Subnet/Index.cshtml
+++ b/GlsunView/Views/Subnet/Index.cshtml
@@ -329,7 +329,7 @@
             if (target.elementType == "node") {
                 console.log("双击节点");
                 var url = getHostPath() + "/Device/Index/" + target.xData;
-                parent.glsun.tab.add(target.text, url);
+                parent.tab.add(target.text, url);
             }
             else if (target.elementType == "link") {
                 console.log("双击连线");
@@ -664,12 +664,12 @@
                 notice = true;
             }
             if (notice) {
-                notificationNodeChanged();
+                notificationNodeChanged(node);
             }
         }
     }
-    function notificationNodeChanged() {
-        parent.window.menuChanged();
+    function notificationNodeChanged(node) {
+        parent.window.menuChanged(node.ID + 200000);
     }
     </script>
 }
