--- a/GlsunView/Views/Home/Index.cshtml
+++ b/GlsunView/Views/Home/Index.cshtml
@@ -129,7 +129,7 @@
             tab.init("#tabControl", {
                 onTabClose: function (e) {
                 }
-            }).add("首页", "@Url.Action("Home", "Home")", true);
+            }).add("首页", "@Url.Action("Index", "Dashboard")", true);
             tab.setMenuOffset({ x: -200, y: -50 });
             initMenu();
 
