--- a/GlsunView/Views/OEOCard/Index.cshtml
+++ b/GlsunView/Views/OEOCard/Index.cshtml
@@ -325,7 +325,7 @@
             }
         </div>
         <div class="tab-pane" id="tab_3">
-            <iframe src="@Url.Action("CardAlarm","CurrentAlram",new { did = ViewBag.Did, slot = ((string)ViewBag.EndPoint).Split(':')[2]})"
+            <iframe src="@Url.Action("CardAlarm","CurrentAlarm",new { did = ViewBag.Did, slot = ((string)ViewBag.EndPoint).Split(':')[2]})"
                     class="log-frame"></iframe>
         </div>
         <div class="tab-pane" id="tab_4">
