--- a/GlsunView/Views/OEOCard/Index.cshtml
+++ b/GlsunView/Views/OEOCard/Index.cshtml
@@ -63,9 +63,9 @@
         #tab_3, #tab_4{
             position:absolute;
             left:0;
-            top:35px;
+            top:0;
             right:0;
-            bottom:5px;
+            overflow-y:hidden;
         }
     </style>
 }
