--- a/GlsunView/Content/css/tabEx.css
+++ b/GlsunView/Content/css/tabEx.css
@@ -3,6 +3,7 @@
     height: 150px;
     border:1px solid #ccc;
     position: relative;
+    overflow:hidden;
 }
 .tabEx-header{
     position: absolute;
